# goals

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
commands/: check.md  create.md  critique.md  diagram.md  discover.md  import.md  improve.md  next.md
docs/: AGENT_FRICTION_FIX_PLAN.md  DOGFOOD_FINDINGS.md  GOAL_EXECUTION_MEMORY.md  LOOP_IMPORT.md  NATIVE_INTEGRATION_PLAN.md  README.md  SELF_EVOLUTION.md  SKILL_DISCOVERY_PLAN.md  TRUST_V1_LONG_TERM_IMPROVEMENT_PLAN.md  VISUAL_BUILDER_GOAL.md  WORKFLOW_IMPROVEMENTS.md  architecture.md  goals-repo-guide.html  subsystems.md
examples/: visual-builder.loop
hooks/: hooks.json
registries/: adapters.yml  agents.yml  gates.yml  permissions.yml  plugins.yml  profiles.yml  skills.yml
scripts/: check_bundled_skill_wheel.py  plugin-bootstrap.sh
skills/: README.md
tests/: test_adapter_inventory.py  test_adapters.py  test_agent_friction.py  test_architecture.py  test_assets.py  test_boundaries.py  test_brief.py  test_capabilities.py  test_citations.py  test_cli_integration.py  test_cli_json.py  test_creative.py  test_diagram.py  test_ecosystem.py  test_error_messages.py  test_evaluations.py  test_execution_gate.py  test_external_reviews.py  test_gates_decisions.py  test_handoffs.py  test_health.py  test_issues.py  test_journey.py  test_loop_builder.py  test_loop_catalog.py  test_loop_check.py  test_loop_improve.py  test_memory.py  test_merge_readiness.py  test_mode_a.py  test_permission_policy.py  test_plugin.py  test_portability.py  test_registry_scanners_dashboard.py  test_roadmap.py  test_rubric.py  test_schemas.py  test_setup.py  test_skill_capabilities.py  (+10 more)
(+102 files in other folders)
