[project]
name = "goals"
version = "0.1.0"
description = "Goals helps AI agents finish bigger tasks without losing track."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Goals Contributors" }]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.scripts]
goals = "goals.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goals"]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
