[project]
name = "goals"
version = "0.1.0"
description = "A no-nonsense goal workflow engine: plain-English goals to tracked steps, with plain-language decisions and evidence-based done."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Shivam Gupta" }]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.scripts]
goals = "goals.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goals"]

# Ship goals' own bundled skills inside the package so they survive a real
# install. Maps the repo-root, copyable ``skills/`` sources to
# ``goals/bundled_skills`` in the wheel; resolved at runtime by
# ``goals.skill_discovery.bundled_skills_root()``.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "goals/bundled_skills"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
